--- a/src/app/admin-dashboard/admin-contact-messages/admin-contact-messages.component.html
+++ b/src/app/admin-dashboard/admin-contact-messages/admin-contact-messages.component.html
@@ -10,15 +10,15 @@
         </div>
 
         <!-- Main Content -->
-        <div class="col-11 main min-vh-100" *ngFor="let message of messages">
-
-            <div class="message row justify-content-start align-items-start p-3">
+        <div class="col-11 main min-vh-100">
+<div class="" *ngFor="let message of messages">
+            <div class="message row justify-content-start align-items-start p-3" >
 
                 <div class="col-1">
                     <img class="img-fluid" src="images/contactUsAvatar.png" alt="avatar">
                 </div>
 
-                <div class="col-11">
+                <div class="col-11" >
                     <div class="d-flex flex-column justify-content-start align-items-end">
                         <div class="col-12 d-flex justify-content-between header">
                             <div class="d-flex flex-column justify-content-start align-items-start">
@@ -36,7 +36,7 @@
                     </div>
                 </div>
 
-            </div>
+            </div></div>
         </div>
     </div>
 </div>
