--- a/src/app/components/pages/learning/stories/tomate-story/tomate-story.component.html
+++ b/src/app/components/pages/learning/stories/tomate-story/tomate-story.component.html
@@ -1,211 +1,241 @@
 <div class="background-color"></div>
 
-<div id="section1" class="background"><img src="images/learningZone/stories/tomate/cover.png" alt="background">
-</div>
-
-<div id="section1" class="cover-title">
-    <h3 class="description">Il était une fois... une petite boule<br> rouge, joyeuse et juteuse</h3>
-    <h1 class="title">Toma Tomate !</h1>
-    <!-- <img class="title" src="images/learningZone/stories/tomate/title.png" alt="title"> -->
-
-    <button class="btn btn-primary"  (click)="discover()" (mouseover)="toggleBox()">Discover</button>
-    <div  *ngIf="showBox" class="cloud">
-        <img src="images/learningZone/stories/tomate/cloud.png" alt="cloude">
-    </div>
-</div>
-
-
-<div *ngIf="showBox" class="content">
-    <!-- <div class="main"></div> -->
-    <!-- first -->
-    <div id="section2" class="section first-shown">
-        <div class="story">
-            <h3>Née au Pérou, la tomate était<br>autrefois jaune et sauvage,<br>appelée "tomatl" par les<br>Aztèques !
-            </h3>
-        </div><img src="images/learningZone/stories/tomate/first_shown.png" alt="first-shown">
-    </div>
-    <div class="fade-first-shown"></div>
-    <!-- second -->
-    <div id="section3" class="section second-shown">
-        <div class="story">
-            <h3>En Europe, on croyait que la tomate était... <span>empoisonnée !</span>
-
-            </h3>
-            <br>
-            <h3 class="end">Mais ce n’était pas sa faute</h3>
-        </div><img src="images/learningZone/stories/tomate/second_shown.png" alt="cloude">
-    </div>
-    <!-- third -->
-    <div id="section4" class="section third-shown">
-        <div class="story">
-            <h3>Des cuisiniers<br>italiens malins l'ont<br>mise dans leurs<br>pâtes</h3>
+<!-- main -->
+<div class="d-flex flex-column justify-content-center align-items-center-gap-0 p-0 w-100 main">
+    <div class="cover">
+        <img src="images/learningZone/stories/tomate/cover.png" alt="background">
+        <div class="cover-title">
+            <h3 class="description">Il était une fois... une petite boule<br> rouge, joyeuse et juteuse</h3>
+            <h1 class="title">Toma Tomate !</h1>
+            <button class="btn btn-primary" (click)="discover()">Discover</button>
         </div>
-        <div class="bottom-story">
-            <h3>Et tout le monde est tombé amoureux !</h3>
-        </div>
-        <img src="images/learningZone/stories/tomate/third_shown.png" alt="second-shown">
     </div>
-    <!-- forth -->
-    <div id="section5" class="section forth-shown">
-        <div class="story">
-            <h3>D’un fruit rejeté à une super<br>star de la cuisine !</h3>
-            <br>
-            <h3 class="end">Vive Toma-Tomate !</h3>
+
+    <div class="d-flex flex-column justify-content-center align-items-center gap-0 p-0 w-100 content">
+        <div class="mainCloud">
+            <img src="images/learningZone/stories/mainCloud.svg" alt="cloud">
         </div>
-        <img src="images/learningZone/stories/tomate/forth_shown.png" alt="third-shown">
-    </div>
-    <!-- fifth -->
-    <div id="section6" class="section fifth-shown">
-        <div class="story">
-            <h3>Il existe des tomates de toutes les formes,<br>couleurs et saveurs !</h3>
-            <br>
-            <h3 class="end">Laquelle est ta préférée ?</h3>
+        <!-- <div class="main"></div> -->
+        <!-- first -->
+        <div id="section2" class="section first-shown">
+            <div class="story">
+                <h3>Née au Pérou, la tomate était<br>autrefois jaune et sauvage,<br>appelée "tomatl" par les<br>Aztèques
+                    !
+                </h3>
+            </div><img src="images/learningZone/stories/tomate/first_shown.png" alt="first-shown">
         </div>
-        <img src="images/learningZone/stories/tomate/fifth_shown.png" alt="forth-shown">
-    </div>
-    <!-- sixth -->
-    <div id="section7" class="section sixth-shown">
-        <div class="story">
-            <h3>Sème les graines entre février et avril, plante-les<br>en mai, et savoure-les tout l’été ! ️</h3>
+        <div class="fade-first-shown"></div>
+        <!-- second -->
+        <div id="section3" class="section second-shown">
+            <div class="story">
+                <h3>En Europe, on croyait que la tomate était... <span>empoisonnée !</span>
+
+                </h3>
+                <br>
+                <h3 class="end">Mais ce n’était pas sa faute</h3>
+            </div><img src="images/learningZone/stories/tomate/second_shown.png" alt="cloude">
         </div>
-        <img src="images/learningZone/stories/tomate/sixth_shown.png" alt="sixth">
-        <!-- cloud -->
-        <div class="cloud2"><img src="images/learningZone/stories/tomate/cloud2.png"
-                alt="cloude">
-            <div class="row">
-                <div class="etape col-auto">Étape 1</div>
-                <div class="etape col-auto">Étape 2</div>
-                <div class="etape col-auto">Étape 3</div>
+
+        <!-- third -->
+        <div id="section4" class="section third-shown">
+            <div class="story">
+                <h3>Des cuisiniers<br>italiens malins l'ont<br>mise dans leurs<br>pâtes</h3>
             </div>
+            <div class="bottom-story">
+                <h3>Et tout le monde est tombé amoureux !</h3>
+            </div>
+            <img src="images/learningZone/stories/tomate/third_shown.png" alt="second-shown">
         </div>
 
-    </div>
-    <!-- seventh -->
-    <div id="section8" class="section seventh-shown">
-        <img class="first-message-content" src="images/learningZone/stories/tomate/message.png" alt="content">
-        <h3 class="first-message">Et chante-leur<br>des chansons<br>douces</h3>
-        <div class="story">
-            <h3 class="second">Arrose comme un<br>chameau: beaucoup,<br>mais pas trop<br>souvent !</h3>
-        </div>
-        <img src="images/learningZone/stories/tomate/seventh_shown.png" alt="sixth">
 
-    </div>
-    <!-- eighth -->
-    <div id="section9" class="section eighth-shown">
-        <div class="story">
-            <h3><span>Toma-Tomate</span><br>
-                est une super-héroïne rouge !</h3>
-            <br><br>
+        <!-- forth -->
+        <div id="section5" class="section forth-shown">
+            <div class="story d-flex flex-column">
+                <h3 class="end">Vive Toma-Tomate !</h3>
+                <br>
+                <h3>D’un fruit rejeté à une super<br>star de la cuisine !</h3>
+            </div>
+            <img src="images/learningZone/stories/tomate/forth_shown.png" alt="third-shown">
         </div>
-        <h3 class="end">Elle protège ton cœur, ton<br>cerveau, ta vue… et plus encore</h3>
-        <img src="images/learningZone/stories/tomate/eighth_shown.png" alt="eighth-shown">
-    </div>
-    <!-- ninth -->
-    <div id="section10" class="section ninth-shown">
-        <!-- C -->
-        <div class="line line1">
-            <!-- <img class="" src="images/learningZone/stories/tomate/line.png" alt="eighth-shown"> -->
+
+
+
+        <!-- fifth -->
+        <div id="section6" class="section fifth-shown">
+            <div class="story d-flex flex-column">
+                <h3 class="end">Laquelle est ta préférée ?</h3>
+                <br>
+                <h3>Il existe des tomates de toutes les formes,<br>couleurs et saveurs !</h3>
+            </div>
+            <img src="images/learningZone/stories/tomate/fifth_shown.png" alt="forth-shown">
         </div>
-        <div class="item C">C</div>
-        <!-- B9 -->
-        <div class="line line2">
-            <!-- <img class="" src="images/learningZone/stories/tomate/line2.png" alt="eighth-shown"> -->
+
+
+        <!-- sixth -->
+        <div id="section7" class="section sixth-shown">
+            <div class="story">
+                <h3>Sème les graines entre février et avril, plante-les<br>en mai, et savoure-les tout l’été ! ️</h3>
+            </div>
+            <img src="images/learningZone/stories/tomate/sixth_shown.png" alt="sixth">
+            <!-- cloud -->
+            <div class="cloud2"><img src="images/learningZone/stories/tomate/cloud2.png" alt="cloude">
+                <div class="row">
+                    <div class="etape col-auto">Étape 1</div>
+                    <div class="etape col-auto">Étape 2</div>
+                    <div class="etape col-auto">Étape 3</div>
+                </div>
+            </div>
+
         </div>
-        <div class="item B9">B9</div>
-        <!-- K1 -->
-        <div class="line line3">
-            <!-- <img class="" src="images/learningZone/stories/tomate/line2.png" alt="eighth-shown"> -->
+
+
+
+        <!-- seventh -->
+        <div id="section8" class="section seventh-shown">
+            <img class="first-message-content" src="images/learningZone/stories/tomate/message.png" alt="content">
+            <h3 class="first-message">Et chante-leur<br>des chansons<br>douces</h3>
+            <div class="story">
+                <h3 class="second">Arrose comme un<br>chameau: beaucoup,<br>mais pas trop<br>souvent !</h3>
+            </div>
+            <img src="images/learningZone/stories/tomate/seventh_shown.png" alt="sixth">
+
         </div>
-        <div class="item K1">K1</div>
-        <!-- E -->
-        <div class="line line4">
-            <!-- <img class="" src="images/learningZone/stories/tomate/line.png" alt="eighth-shown"> -->
+
+
+
+        <!-- eighth -->
+        <div id="section9" class="section eighth-shown">
+            <div class="story">
+                <h3><span>Toma-Tomate</span><br>
+                    est une super-héroïne rouge !</h3>
+                <br><br>
+            </div>
+            <h3 class="end">Elle protège ton cœur, ton<br>cerveau, ta vue… et plus encore</h3>
+            <img src="images/learningZone/stories/tomate/eighth_shown.png" alt="eighth-shown">
         </div>
-        <div class="item E">E</div>
-        <!-- A -->
-        <div class="line line5">
-            <!-- <img class="" src="images/learningZone/stories/tomate/line.png" alt="eighth-shown"> -->
-        </div>
-        <div class="item A">A</div>
-        <!-- benifits -->
-        <div class="story">
-            <h3>Une bombe de vitamines :</h3>
-        </div>
-        <img src="images/learningZone/stories/tomate/ninth_shown.png" alt="eighth-shown">
-        <!-- <div class="cloud3" [class.show-cloud]="showCloud"><img src="images/learningZone/stories/tomate/cloud2.png"
+
+
+
+        <!-- ninth -->
+        <div id="section10" class="section ninth-shown">
+            <!-- C -->
+            <div class="line line1">
+                <!-- <img class="" src="images/learningZone/stories/tomate/line.png" alt="eighth-shown"> -->
+            </div>
+            <div class="item C">C</div>
+            <!-- B9 -->
+            <div class="line line2">
+                <!-- <img class="" src="images/learningZone/stories/tomate/line2.png" alt="eighth-shown"> -->
+            </div>
+            <div class="item B9">B9</div>
+            <!-- K1 -->
+            <div class="line line3">
+                <!-- <img class="" src="images/learningZone/stories/tomate/line2.png" alt="eighth-shown"> -->
+            </div>
+            <div class="item K1">K1</div>
+            <!-- E -->
+            <div class="line line4">
+                <!-- <img class="" src="images/learningZone/stories/tomate/line.png" alt="eighth-shown"> -->
+            </div>
+            <div class="item E">E</div>
+            <!-- A -->
+            <div class="line line5">
+                <!-- <img class="" src="images/learningZone/stories/tomate/line.png" alt="eighth-shown"> -->
+            </div>
+            <div class="item A">A</div>
+            <!-- benifits -->
+            <div class="story">
+                <h3>Une bombe de vitamines :</h3>
+            </div>
+            <img src="images/learningZone/stories/tomate/ninth_shown.png" alt="eighth-shown">
+            <!-- <div class="cloud3" [class.show-cloud]="showCloud"><img src="images/learningZone/stories/tomate/cloud2.png"
                 alt="cloude">
         </div> -->
 
-    </div>
-    <!-- title -->
-    <div id="section11" class="section benifits">
-        <h3>Les tomates<br>dynamisent le corps</h3>
-        <div class="row" style="display: flex; flex-direction: row; justify-content: center; gap: 48px;">
-            <!-- 1 -->
-            <div class="benifit benifit1 col-auto">
-                <div class="benifit-desc">
-                    <p>Elle envoie un câlin magique à<br>ton cœur : il devient tout<br>léger ! ❤️</p>
-                </div>
-                <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit1.png" alt="benifit 1">
-                </div>
-            </div>
-            <!-- 2 -->
-            <div class="benifit benifit2 col-auto">
-                <div class="benifit-desc">
-                    <p>Elle donne de la force à tes<br>jambes: hop, en avant les bottes<br>rouges !</p>
-                </div>
-                <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit2.png" alt="benifit 2">
-                </div>
-            </div>
-            <!-- 3 -->
-            <div class="benifit benifit3 col-auto">
-                <div class="benifit-desc">
-                    <p>Elle chasse les petits nuages<br>gris de ton corps. ☁️</p>
-                </div>
-                <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit3.png" alt="benifit 3">
-                </div>
-            </div>
         </div>
 
-        <!-- second collection -->
-        <div  id="section12" class="row" style="display: flex; flex-direction: row; justify-content: center; gap: 48px;">
-            <!-- 4 -->
-            <div class="benifit benifit4 col-auto">
-                <div class="benifit-desc">
-                    <p>Croque-la... et ton ventre<br>brille comme le soleil ! 🌞</p>
+
+
+
+
+        <!-- title -->
+        <div id="section11" class="section benifits">
+            <h3>Les tomates<br>dynamisent le corps</h3>
+            <div class="row" style="display: flex; flex-direction: row; justify-content: center; gap: 48px;">
+                <!-- 1 -->
+                <div class="benifit benifit1 col-auto">
+                    <div class="benifit-desc">
+                        <p>Elle envoie un câlin magique à<br>ton cœur : il devient tout<br>léger ! ❤️</p>
+                    </div>
+                    <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit1.png" alt="benifit 1">
+                    </div>
                 </div>
-                <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit4.png" alt="benifit 4">
+                <!-- 2 -->
+                <div class="benifit benifit2 col-auto">
+                    <div class="benifit-desc">
+                        <p>Elle donne de la force à tes<br>jambes: hop, en avant les bottes<br>rouges !</p>
+                    </div>
+                    <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit2.png" alt="benifit 2">
+                    </div>
+                </div>
+                <!-- 3 -->
+                <div class="benifit benifit3 col-auto">
+                    <div class="benifit-desc">
+                        <p>Elle chasse les petits nuages<br>gris de ton corps. ☁️</p>
+                    </div>
+                    <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit3.png" alt="benifit 3">
+                    </div>
                 </div>
             </div>
-            <!-- 5 -->
-            <div class="benifit benifit5 col-auto">
-                <!-- <div class="benifit-desc">
+
+            <!-- second collection -->
+            <div id="section12" class="row"
+                style="display: flex; flex-direction: row; justify-content: center; gap: 48px;">
+                <!-- 4 -->
+                <div class="benifit benifit4 col-auto">
+                    <div class="benifit-desc">
+                        <p>Croque-la... et ton ventre<br>brille comme le soleil ! 🌞</p>
+                    </div>
+                    <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit4.png" alt="benifit 4">
+                    </div>
+                </div>
+                <!-- 5 -->
+                <div class="benifit benifit5 col-auto">
+                    <!-- <div class="benifit-desc">
                     <p>Elle donne de la force à tes<br>jambes: hop, en avant les bottes<br>rouges !</p>
                 </div> -->
-                <div class="benifit-img"><img src="images/logo-patarif.png" alt="benifit 5">
+                    <div class="benifit-img logo img-fluid"><img src="images/logo-patarif.png" alt="benifit 5">
+                    </div>
                 </div>
-            </div>
-            <!-- 6 -->
-            <div class="benifit benifit6 col-auto">
-                <div class="benifit-desc">
-                    <p>Manger une tomate, c’est<br>comme lancer des confettis de<br>bonne humeur ! 🎉</p>
-                </div>
-                <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit5.png" alt="benifit 6">
+                <!-- 6 -->
+                <div class="benifit benifit6 col-auto">
+                    <div class="benifit-desc">
+                        <p>Manger une tomate, c’est<br>comme lancer des confettis de<br>bonne humeur ! 🎉</p>
+                    </div>
+                    <div class="benifit-img"><img src="images/learningZone/stories/tomate/benifit5.png" alt="benifit 6">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div id="section13" class="section last-shown">
-        <div class="story">
-            <h3>Ajoute-moi à tes salades, tes sauces<br>ou ton jus…
-            </h3>
+
+
+        <div id="section13" class="section last-shown">
+            <div class="story">
+                <h3>Ajoute-moi à tes salades, tes sauces<br>ou ton jus…
+                </h3>
+            </div>
+
+            <h3 class="second-message"> Et ton corps dansera la salsa de la santé !</h3>
+            <img src="images/learningZone/stories/tomate/tenth_shown.png" alt="last-shown">
         </div>
 
-        <h3 class="second-message"> Et ton corps dansera la salsa de la santé !</h3>
-        <img src="images/learningZone/stories/tomate/tenth_shown.png" alt="last-shown">
-    </div>
-    <div class="footer">
 
-        <app-home-footer [color]="'#B68455'"></app-home-footer>
     </div>
+    <app-home-footer [color]="'#B68455'"></app-home-footer>
+</div>
+
+<!-- phone horizontal direction -->
+
+<div class="rotate-message">
+    <img src="images/learningZone/stories/mainMessage.svg" alt="please, rotate your phone [required]">
 </div>
